Luotiin linkin-lisäysmahdollisuus lukuvinkille. Konstruktori luo uusille lukuvinkeille URL:n NIL (Nothing In Line). Linkki lisätään yksittäisen vinkin tarkastelun kautta, ohjeet konsolissa